[package]
name = "cfile"
version = "0.2.2"
authors = ["Flier Lu <flier.lu@gmail.com>"]
description = "Rust bindings to C FILE"
repository = "https://github.com/flier/rust-cfile"
documentation = "http://flier.github.io/rust-cfile/release/0.2/cfile/"
readme = "README.md"
license = "MIT"

[dependencies]
libc = "0.2"

[lib]
name = "cfile"
path = "src/lib.rs"
